@@ -180,6 +180,13 @@
                 <scope>import</scope>
             </dependency>
 
+            <!-- TestContainers Redis -->
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>redis</artifactId>
+                <scope>test</scope>
+            </dependency>
+
             <!-- REST Assured -->
             <dependency>
                 <groupId>io.rest-assured</groupId>
@@ -239,6 +246,7 @@
                             --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                             --add-opens java.base/java.text=ALL-UNNAMED
                             --add-opens java.desktop/java.awt.font=ALL-UNNAMED
+                            -Dnet.bytebuddy.experimental=true
                         </argLine>
                     </configuration>
                 </plugin>
